--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,17 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>dk.cphbusiness</groupId>
-  <artifactId>jwtbackend</artifactId>
+  <artifactId>JPA-ORM-Exam</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>jwtbackend</name>
+  <name>JPA-ORM</name>
 
   <properties>
     <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
-    <remote.server>https://www.rasmuslynge.com/manager/text</remote.server>
+    <remote.server>https://magnusklitmose.com/manager/text</remote.server>
         
     <!--<tomcat.version>7.0.93</tomcat.version>-->
     <tomcat.version>8.5.40</tomcat.version>
